--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,9 @@ on:
       app_pkg_name:
         description: '请输入您要打包的项目的包名（示例：com.<Yourname>.<appname>）'
         required: true
+        default: 'com.'
       file_path:
-        description: '请输入项目文件以项目根目录为基准的相对路径（仅支持.sb3文件，以“/”作为路径分隔符）'
+        description: '请输入html文件以项目根目录为基准的相对路径（以“/”作为路径分隔符）'
         required: true
 jobs:
   build-apk:
@@ -24,16 +25,12 @@ jobs:
       - name: Install Cordova
         run: |
           npm install -g cordova
-          npm install scratch3-htmlifier
-      - name: Convert SB3 to HTML
-        run: |
-          scratch3-htmlifier ${{ github.event.inputs.file_path }} index.html
       - name: Create Cordova project
         run: |
           cordova create my-app ${{ github.event.inputs.app_pkg_name }} ${{ github.event.inputs.app_name }}
           cd my-app
           cordova platform add android
-          cp ../index.html www/
+          cp ../${{ github.event.inputs.file_path }} www/index.html
       - name: Build APK
         run: |
           cd my-app
