--- a/.github/workflows/pyb.yml
+++ b/.github/workflows/pyb.yml
@@ -11,13 +11,16 @@ on:
         required: true
         default: 'com.'
       file_path:
-        description: '请输入Python脚本以项目根目录为基准的相对路径（以“/”作为路径分隔符）'
+        description: '请输入Python脚本所在目录以项目根目录为基准的相对路径（以“/”作为路径分隔符）'
         required: true
       icon_path:
-        description: '请输入应用图标以项目根目录为基准的相对路径（以“/”作为路径分隔符）'
+        description: '请输入应用图标以项目根目录为基准的相对路径（以“/”作为路径分隔符，支持常见图片格式）'
         required: true
       version:
         description: '请输入版本号'
+        required: true
+      startpic_path:
+        description: '请输入应用启动时显示的图片（以“/”作为路径分隔符，支持常见图片格式）'
         required: true
 
 jobs:
@@ -35,19 +38,4 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install kivy
-
-      - name: Install Kivy dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev pkg-config libgl1-mesa-dev libgles2-mesa-dev python-gst-1.0 python3-gst-1.0 libgstreamer1.0-dev libmtdev-dev
-
-      - name: Build APK
-        run: |
-          python -m kivy.tools.packaging.kivy_compile --package  ${{ github.event.inputs.app_pkg_name }} --name "${{ github.event.inputs.app_name }}" --version 1.0 --private ${{ github.workspace }}/myapp --icon ${{ github.workspace }}/icon.png --orientation landscape --permissions "INTERNET,ACCESS_NETWORK_STATE" --presplash ${{ github.workspace }}/presplash.png --copy-libs
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: myapp.apk
-          path: ${{ github.workspace }}/bin/myapp-1.0-arm64-v8a-debug.apk
+          pip install 
