--- a/.github/workflows/pyb.yml
+++ b/.github/workflows/pyb.yml
@@ -58,4 +58,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: my_app
-        path: bin/*
+        path: ${{ github.event.inputs.file_path }}/bin/*
