--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,16 +27,13 @@ jobs:
           npm install -g cordova
       - name: Create Cordova project
         run: |
-          cordova create my-app ${{ github.event.inputs.app_pkg_name }} ${{ github.event.inputs.app_name }}
-          cd my-app
+          cordova create . ${{ github.event.inputs.app_pkg_name }} ${{ github.event.inputs.app_name }}
           cordova platform add android
-          cp ../${{ github.event.inputs.file_path }} www/index.html
-      - name: Build APK
+      - name: Commit and push changes
         run: |
-          cd my-app
-          cordova build android
-      - name: Archive APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-app-apk
-          path: my-app/platforms/android/app/build/outputs/apk/debug/app-debug.apk
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add .
+          git commit -m "Create project structure for ${{ inputs.project_name }}"
+          git push
+          
