--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
           npm install -g cordova
       - name: Create Cordova project
         run: |
-          cordova create . ${{ github.event.inputs.app_pkg_name }} ${{ github.event.inputs.app_name }}
+          cordova create ${{ github.event.inputs.app_name }} ${{ github.event.inputs.app_pkg_name }} ${{ github.event.inputs.app_name }}
           cordova platform add android
       - name: Commit and push changes
         run: |
